# Firstry

./: ""  .bandit  .coverage.codespaces-f988a3.129744.XAvHgyUx  .coverage.codespaces-f988a3.466262.XCPZXdJx  .coverage.codespaces-f988a3.466989.XwrEEurx  .coverage.codespaces-f988a3.470838.XAtMCjGx  .coveragerc  .dockerignore  .firsttry.yml  .firsttry_detect_cache.json  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.bak  .pre-commit-ignore  .ruff.pre-commit.toml  .ruff.toml  .testmondata  AUTO_PARITY_COMPLETE.md  BACKUP_COMPLETE_SUMMARY.md  BACKUP_RECOVERY_GUIDE.md  BACKWARD_COMPAT_COMPLETE.md  BACKWARD_COMPAT_IMPLEMENTATION.md  BENCHMARK_HARNESS_COMPLETE.md  BENCHMARK_HARNESS_DELIVERY.md  BENCHMARK_HARNESS_QUICK_REF.md  BENCHMARK_READINESS_COMPLETE.md  BENCHMARK_REPORT_FINAL.md  BENCHMARK_RESULTS_SUMMARY.md  BENCHMARK_SYSTEM_COMPLETE.md  BLAKE3_INTEGRATION_GUIDE.md  BUNDLE_INVENTORY.txt  CACHING_DELIVERY_FINAL.md  CACHING_IMPLEMENTATION_COMPLETE.md  CACHING_QUICK_REF.md  CHANGELOG.md  CI_CD_HARDENING_COMPLETE.md  CI_PARITY_TIGHTENED.md  CI_PARITY_VALIDATED.md  CI_WORKFLOWS_WARM_CACHE.md  CI_WORKFLOW_INTEGRATION.md  (+201 more)
.devcontainer/: devcontainer.json  onCreate.sh  postCreate.sh  postStart.sh
.firsttry/: Dockerfile  FIRSTTRY_FINDINGS.md  bandit.json  cache.json  ci-extra-requirements.txt  ci_mirror.toml  cli_test.json  dashboard.html  firsttry_copilot_simulation_report_v2.md  free-lite.ent.json  free-lite.json  free-lite.lic.json  free-strict.changed.json  free-strict.ent.json  free-strict.json  free-strict.lic.json  history.jsonl  last_run.json  last_run_no_bench.json  pro.cold.json  pro.lic.json  pro.warm.json  report.html  report.json  sim_all_done.flag  sim_extended_complete.flag  sim_release_complete.flag  sim_sanity_complete.flag  smoke_report.json  test_lazy.json  tier_summary.json  tier_summary.md  twin.json
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  ci-dev-nudge.txt  dependabot.yml
.quality/: typing_baseline.txt
.venv-build/: pyvenv.cfg
.venv-firsttry-release/: pyvenv.cfg
.venv-firsttry-sim/: pyvenv.cfg
.venv_tmp/: pyvenv.cfg
app/: __init__.py  licensing.py  main.py  schemas.py  webhooks.py
artifacts/: .testmondata  parity_report.json  pytest-warm.json
benchmarks/: README.md  bench_config.yaml  bench_config_test.yaml  bench_runner.py
ci/: flaky_tests.json  parity.lock.json
constraints/: security.txt
dashboard/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
docs/: ARTIFACT_POLICY.md  COPILOT_GUARD.md  COVERAGE_JSON_ARTIFACT.md  ENTERPRISE_LICENSE_SUMMARY.md  FASTPATH_BLAKE3.md  FIRSTTRY_COVERAGE_DOCTRINE.md  Gates.md  HASHING_STRATEGY.md  benchmarks.md  conf.py  config.md  index.rst  licensing.md
firsttry/: __init__.py  __main__.py  cache.py  ci_mapper.py  ci_mapper_impl.py  cli.py  cli_runner_light.py  cli_v2.py  config.py  db_pg.py  db_sqlite.py  docker_smoke.py  doctor.py  gates.py  hooks.py  license.py  models.py  pro_features.py  profiles.py  quickfix.py  report.py  reporting.py  runner_light.py  runners.py  scanner.py  self_repair.py  state.py
firsttry-audit/: firsttry-capability-report.md  run-audit.sh
ft_fastpath/: .gitignore  Cargo.toml  README.md
licensing/: README.md  pyproject.toml
licensing/app/: __init__.py  licensing.py  main.py  schemas.py  webhooks.py
licensing/tests/: __init__.py  conftest.py  test_api.py  test_licensing_module.py  test_webhooks.py  test_webhooks_more.py
patches-perf-40pc/: 0001-ci-pin-upload-artifact-to-v3-across-workflows.patch  0002-feat-Add-4-major-performance-optimizations-40-faster.patch  0003-chore-gitignore-block-.venv-parity-and-common-artifa.patch
policies/: enterprise-strict.json
scripts/: _ft_probe.py  bootstrap-parity.sh  bootstrap_dev.sh  check-workflows.sh  check_coverage_floor.sh  check_notimpl.py  check_typing_metrics.py  ci_checks.py  compact_findings.py  copilot_ft_audit.sh  count_typing_crutches.py  dev_fast.sh  enable-hooks  fix_test_fences.py  ft-ci-local  ft-parity-bootstrap.sh  ft_audit_readonly.sh  ft_bench_ready.sh  ft_bench_run.sh  ft_collect_snippets.py  ft_enterprise_audit.sh  ft_gap_probe_telemetry.sh  ft_precommit_parity.sh  ft_quick_sweep.sh  ft_readonly_audit.sh  ft_tier_summary.sh  ft_tier_sweep.sh  ft_view_benchmark.sh  ft_vs_manual_sweep.sh  generate_findings.py  generate_gates_doc.py  install-hooks  parse_ft_logs.py  perf_snapshot.sh  pre-push  pre-push-runner  repo_guard.sh  resolve_conflicts_quick.py  run_all_firsttry_cmds.sh  run_bench.sh  (+6 more)
tests/: __init__.py  cli_utils.py  conftest.py  test_argparse_entrypoint.py  test_audit_emit_simple.py  test_bandit_advisory.py  test_bouncer_demo_mode.py  test_cache.py  test_cache_fastpaths.py  test_cache_models_roundtrip.py  test_cache_selection.py  test_cache_utils_paths_hash.py  test_changed_module.py  test_changes.py  test_checks_orchestrator_buckets.py  test_ci_mapped.py  test_ci_mapper.py  test_ci_mapper_adaptive.py  test_ci_mapper_comprehensive.py  test_ci_mapper_impl_added.py  test_ci_mapper_impl_comprehensive.py  test_ci_mapper_impl_contract.py  test_ci_mapper_impl_module.py  test_ci_mapper_impl_more.py  test_ci_mapper_more.py  test_ci_self_check_coverage.py  test_cli_aliases_tiers.py  test_cli_args_parity.py  test_cli_args_parity_min.py  test_cli_comprehensive.py  test_cli_contract.py  test_cli_doctor_and_license.py  test_cli_gates_json.py  test_cli_install_hooks.py  test_cli_integration.py  (+121 more)
tools/firsttry/: __init__.py  pyproject.toml
tools/firsttry/firsttry/: __init__.py  changed.py  ci_mapper.py  cli.py  config.py  db_pg.py  db_sqlite.py  docker_smoke.py  doctor.py  gates.py  hooks.py  license.py  license_cache.py  mapper.py  quickfix.py  runners.py  vscode_skel.py
tools/firsttry/tests/: conftest.py  test_changed.py  test_cli.py  test_cli_license.py  test_cli_license_ok.py  test_config.py  test_hooks.py  test_import_resolution.py  test_license_cache.py  test_license_modes.py  test_mapper.py  test_no_site_packages_collision.py  test_runners.py  test_runners_extra.py  test_runners_monkeypatch_contract.py  test_telemetry.py
(+920 files in other folders)
