[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firsttry-run"
version = "0.1.9"
description = "Ship code that passes CI on the first try."
authors = [{ name = "FirstTry", email = "founder@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "PyYAML",
  "ruff>=0.1.0",
  "black>=22.0.0",
  "mypy>=1.0.0",
  "pytest>=7.0.0",
  "tomli; python_version < \"3.11\"",
]

[project.optional-dependencies]
enterprise = ["boto3>=1.34"]
test = ["moto[boto3]>=5.0.0", "boto3>=1.34.0", "botocore>=1.34.0"]

[project.scripts]
firsttry = "firsttry.cli:main"
ft = "firsttry.cli_aliases:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["firsttry*"]


[tool.ruff]
# Only lint our Python source and tests; skip vendored, coverage, docs, and benchmarks
extend-exclude = [
  ".venv",
  ".venv-build",
  "htmlcov",
  "docs",
  "dashboard",
  "benchmarks",
  "firsttry.egg-info",
  "**/*.egg-info",
  # Exclude demo/performance scripts from strict linting
  "step12_*.py",
  "validation_*.py",
  "test_cache_performance.py",
  "test_improvements.py",
  "demo_*.py",
  "performance_benchmark.py",
]
target-version = "py310"
line-length = 200

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.lint.per-file-ignores]
# Tests may use dynamic names and type comparisons in legacy cases
"tests/**" = ["F821", "E721", "F841"]

[tool.black]
# Black configuration made authoritative for this repository
line-length = 100
target-version = ["py311"]

# Only format code we own
include = '^(src|tests|tools|scripts)/'

# Keep Black away from fixture forests and envs
extend-exclude = '''
(
  ^benchmarks/
 | ^my-monorepo/
 | ^vscode-extension/
 | \.venv
 | \.venv-build
 | node_modules
 | \.mypy_cache
 | \.ruff_cache
 | \.pytest_cache
 | \.firsttry
 | dist
 | build
 | \.next
 | coverage
)
'''

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests", "licensing/lic_tests"]
pythonpath = [".", "src"]
norecursedirs = [
  ".git", ".venv", ".venv-build", ".pytest_cache", ".mypy_cache", ".ruff_cache", 
  "__pycache__", "node_modules", "dist", "build", ".next", "coverage", ".firsttry", 
  "benchmarks", "my-monorepo", "vscode-extension"
]

[tool.firsttry.coverage]
critical_min_rate = 60  # PR; main stricter gate remains in CI step
critical_files = [
  "firsttry/state.py",
  "firsttry/smart_pytest.py", 
  "firsttry/planner.py",
  "firsttry/scanner.py",
]

