[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firsttry-run"
version = "1.0.1"
description = "Ship code that passes CI on the first try."
authors = [{ name = "FirstTry", email = "founder@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "PyYAML",
  "ruff>=0.1.0",
  "black>=22.0.0",
  "mypy>=1.0.0",
  "pytest>=7.0.0",
  "tomli; python_version < \"3.11\"",
]

[project.optional-dependencies]
enterprise = ["boto3>=1.34"]

[project.scripts]
firsttry = "firsttry.cli:main"
ft = "firsttry.cli_aliases:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["firsttry", "firsttry.*"]


[tool.ruff]
# Only lint our Python source and tests; skip vendored, coverage, docs, and benchmarks
extend-exclude = [
  ".venv",
  ".venv-build",
  "htmlcov",
  "docs",
  "dashboard",
  "benchmarks",
  "firsttry.egg-info",
  "**/*.egg-info",
  # Exclude demo/performance scripts from strict linting
  "step12_*.py",
  "validation_*.py",
  "test_cache_performance.py",
  "test_improvements.py",
  "demo_*.py",
  "performance_benchmark.py",
]
target-version = "py310"
line-length = 200

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.lint.per-file-ignores]
# Tests may use dynamic names and type comparisons in legacy cases
"tests/**" = ["F821", "E721", "F841"]

